# Stream-HLS

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build-streamhls.sh  env.sh
FPGA2025_Artificats/: .python-version  README.md  clean_all.sh  copy_all.sh  report_all.sh
FPGA2025_Artificats/cnns/: clean_all.sh  cnns.csv  report.py
FPGA2025_Artificats/cnns/opt1/DepthwiseSeparableConvBlock/: cmd.sh  streamhls_2024-10-04_14-42-03.json
FPGA2025_Artificats/cnns/opt1/ResidualBlock/: cmd.sh  streamhls_2024-10-04_14-42-17.json
FPGA2025_Artificats/cnns/opt1/results_rtl/: ResidualBlock.rpt
FPGA2025_Artificats/cnns/opt1/results_syn/: ResidualBlock.xml
FPGA2025_Artificats/cnns/opt2/: collect_rpts.sh
FPGA2025_Artificats/cnns/opt2/results_rtl/: ResidualBlock.rpt
FPGA2025_Artificats/cnns/opt2/results_streamhls/: DepthwiseSeparableConvBlock.json  ResidualBlock.json
FPGA2025_Artificats/cnns/opt2/results_syn/: DepthwiseSeparableConvBlock.rpt
FPGA2025_Artificats/cnns/opt3/: collect_rpts.sh
FPGA2025_Artificats/cnns/opt3/DepthwiseSeparableConvBlock/: cmd.sh
FPGA2025_Artificats/cnns/opt3/ResidualBlock/: cmd.sh  streamhls_2024-09-25_12-35-28.json
FPGA2025_Artificats/cnns/opt3/results_rtl/: DepthwiseSeparableConvBlock.rpt  ResidualBlock.rpt
FPGA2025_Artificats/cnns/opt3/results_streamhls/: DepthwiseSeparableConvBlock.json
FPGA2025_Artificats/cnns/opt3/results_syn/: DepthwiseSeparableConvBlock.rpt  DepthwiseSeparableConvBlock.xml  ResidualBlock.xml
FPGA2025_Artificats/cnns/opt4/DepthwiseSeparableConvBlock/: cmd.sh
FPGA2025_Artificats/cnns/opt4/ResidualBlock/: cmd.sh
FPGA2025_Artificats/cnns/opt4/results_streamhls/: DepthwiseSeparableConvBlock.json  ResidualBlock.json
FPGA2025_Artificats/cnns/opt4/results_syn/: DepthwiseSeparableConvBlock.rpt  DepthwiseSeparableConvBlock.xml
FPGA2025_Artificats/cnns/opt5/DepthwiseSeparableConvBlock/: cmd.sh
FPGA2025_Artificats/cnns/opt5/ResidualBlock/: cmd.sh  streamhls_2024-09-27_21-55-11.json
FPGA2025_Artificats/cnns/opt5/results_rtl/: DepthwiseSeparableConvBlock.rpt  ResidualBlock.rpt
FPGA2025_Artificats/cnns/opt5/results_streamhls/: DepthwiseSeparableConvBlock.json
FPGA2025_Artificats/mlps/: report.py
FPGA2025_Artificats/mlps/opt1/: collect_rpts.sh
FPGA2025_Artificats/mlps/opt1/Autoencoder/: cmd.sh  (+1 more)
FPGA2025_Artificats/polybench/: clean_all.sh  compare.csv  report_ablation.py  report_compare.py
FPGA2025_Artificats/polybench/allo/: clean.sh  collect_rpts.sh  generate_tbs.py
FPGA2025_Artificats/polybench/heterocl/: collect_rpts.sh  generate_tbs.py
FPGA2025_Artificats/polybench/hida/: clean_all.sh  generate_tbs.py  run_dse_all.sh
FPGA2025_Artificats/polybench/pom/: config.json  generate_tbs.py
FPGA2025_Artificats/polybench/scalehls/: clean_all.sh  collect_rpts.sh  generate_tbs.py
FPGA2025_Artificats/polybench/streamhls/: clean.sh
FPGA2025_Artificats/polybench/vitis/: generate_tbs.py
FPGA2025_Artificats/results/: combine_data.py  table10_ablation.py  table5_validation.py  table7_compare.py
FPGA2025_Artificats/results/Table8/: report_all.py
FPGA2025_Artificats/results/Table9/: 3mm.py
FPGA2025_Artificats/results/data/: compare.csv  mlps.csv  polybench.csv  synthetic.csv  transformers.csv
FPGA2025_Artificats/results/tables/: Opt1_error_table.csv  Opt5_error_table.csv  ablation_table.csv  compare_all.csv  table10.csv  table5_Opt1.csv  table5_Opt5.csv  table7.csv
FPGA2025_Artificats/results/tmp/: combined_data.csv
FPGA2025_Artificats/synthetic/: report.py
FPGA2025_Artificats/synthetic/opt4/: collect_rpts.sh
FPGA2025_Artificats/transformers/: report.py
FPGA2025_Artificats/transformers/opt1/: collect_rpts.sh
examples/: README.md  compile.sh  data.py  env.sh  gen_mlir_designs.py  run_cnns.py  run_mlps.py  run_polybench.py  run_single.py  run_streamhls.py  run_synthetic.py  run_transformers.py  streamhls_pipeline.py  utils.py
examples/polygeist/: atax.mlir  atax_opt.mlir  graph.dot.dot  graph.dot_merged.dot  report.csv_combined.mod  report.csv_combined.py  report.csv_parallel.dot  run.sh
examples/pymodels/cnns/: DepthwiseSeparableConvBlock.py
examples/pymodels/mlps/: Autoencoder.py  ResMLP.py
examples/pymodels/polybench/: gesummv.py
examples/scripts/: gen_batch.py  gen_vitis.py
examples/scripts/experiments/: run_mlps.py  run_synthetic.py
include/streamhls/: InitAllDialects.h  InitAllPasses.h
include/streamhls/Dialect/: CMakeLists.txt
include/streamhls/Support/: AffineMemAccess.h  DFG.h  DataflowGraph.h  Utils.h
include/streamhls/Transforms/: CMakeLists.txt  Passes.h  Passes.td
include/streamhls/Translation/: EmitTAPA.h  EmitVivadoHLS.h  Utils.h  Visitor.h
lib/: CMakeLists.txt  Passes.cpp
lib/Analysis/: CMakeLists.txt  CountOperations.cpp  PrintDataflowGraph.cpp  PrintIR.cpp
lib/Dialect/: CMakeLists.txt
lib/Dialect/Dataflow/: CMakeLists.txt  Dataflow.cpp
lib/Support/: AffineMemAccess.cpp  CMakeLists.txt  DFG.cpp  DataflowGraph.cpp  Utils.cpp
lib/Transforms/: BufferizeFuncArgs.cpp  CMakeLists.txt  CombinedOptimization.cpp  ConstantFIFOPropogation.cpp  ConvertMemRefsToFIFOs.cpp  ConvertToSingleProducerSingleConsumer.cpp  CreateDataflowFromAffine.cpp  CreateHost.cpp  CreateTapaTopTask.cpp  CreateTasks.cpp  CreateWeightBins.cpp  EliminateArrayOfStreams.cpp  LowerCopyToAffine.cpp  LowerSubviewToAffine.cpp  MinimizeBufferSizes.cpp  NodeGraphPipelining.cpp  NodeParallelization.cpp  PipelineInnerLoops.cpp  RemoveLoopsOfUnitIter.cpp  RemoveRedundantMemRefs.cpp  RemoveRedundantOps.cpp  StencilDataReuse.cpp
lib/Translation/: CMakeLists.txt  EmitTAPA.cpp  EmitVivadoHLS.cpp  Utils.cpp
license/: ScaleHLS.txt
scripts/: build-barnivok.sh  build-circt.sh  build-llvm.sh  build-polygeist.sh  build-polymer.sh  build-streamhls.sh  poly.sh
test/: CMakeLists.txt  lit.cfg.py
test/Transforms/: convert-memrefs-to-fifos.mlir  convert-to-single-producer-single-consumer.mlir  create-tasks.mlir  kernel-pipeline.mlir
tools/: CMakeLists.txt
tools/streamhls-opt/: CMakeLists.txt  streamhls-opt.cpp
tools/streamhls-translate/: CMakeLists.txt  streamhls-translate.cpp
(+5179 files in other folders)
